--- a/templates/short_url/short_url.html
+++ b/templates/short_url/short_url.html
@@ -16,7 +16,7 @@
     <div class="row justify-content-md-center">
         <div class="col-md-6 form-block">
             <h3 class="mb-3 text-center text-monospace">{{ title1 }}</h3>
-            <h4 class="mb-3 text-center text-monospace text-nowrap bd-highlight">{{ title2|escape }}</h4>
+            <h4 class="mb-3 text-center text-monospace text-nowrap bd-highlight">{{ title2 }}</h4>
             <form id="url-form">
                 <div class="form-group" id="form-group-long_url">
                     <label for="long-url">URL*:</label>
